[package]
name = "rp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
fs_extra = "1.3.0"
log = "0.4.20"
regex = "1.9.5"
walkdir = "2.4.0"
assert_cmd = "2.0.12"
exitfailure = "0.5.1"
predicates = "3.0.3"
structopt = "0.3.26"